Kubernetes/2.3/src/nginx-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-nginx
  template:
    metadata:
      labels:
        app: app-nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
          - name: nginx-html
            mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-html
        configMap:
          name: app-configmap
