Kubernetes/2.3/src/nginx-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: NodePort
  selector:
    app: app-nginx
  ports:
  - name: nginx
    protocol: TCP
    port: 80
