Kubernetes/2.3/src/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-nodeport
spec:
  type: NodePort
  selector:
    app: app-deployment
  ports:
  - name: nginx
    protocol: TCP
    port: 80
  - name: multitool
    protocol: TCP
    port: 8080
